--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,21 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Tests de seguridad: @WithMockUser, MockMvc con filtros, etc. -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- Tests de arquitectura con ArchUnit -->
+		<dependency>
+			<groupId>com.tngtech.archunit</groupId>
+			<artifactId>archunit-junit5</artifactId>
+			<version>1.3.0</version>
+			<scope>test</scope>
+		</dependency>
+
 		<!-- JWT (Opcional, si estás usando tokens de autenticación JWT) -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
