--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
 	<groupId>com.colors</groupId>
 	<artifactId>savd</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
+	<packaging>jar</packaging>
+
 	<name>savd</name>
 	<description>Sistema de ventas</description>
 	<url/>
@@ -81,7 +84,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.14.0</version>
+			<version>3.17.0</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -93,12 +96,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<version>5.11.0</version>
 			<scope>test</scope>
 		</dependency>
 
